# farmledge-labs-protocol

./: .gitignore  Cargo.toml
.github/workflows/: audit.yml  ci.yml  test.yml
contracts/maize-receipt/: Cargo.toml
contracts/maize-receipt/src/: lib.rs  storage.rs
contracts/maize-receipt/test_snapshots/tests/: test_add_custodian_success.1.json  test_add_custodian_unauthorized.1.json  test_add_multiple_custodians.1.json  test_burn_nonexistent_token.1.json  test_burn_success.1.json  test_burn_wrong_custodian.1.json  test_double_lock_rejected.1.json  test_lock_success.1.json  test_lock_unauthorized.1.json  test_lock_unlock_burn_lifecycle.1.json  test_lock_unlock_transfer_flow.1.json  test_mint_counter_increments.1.json  test_mint_rejects_invalid_commodity.1.json  test_mint_rejects_unauthorized_custodian.1.json  test_mint_rejects_zero_bag_count.1.json  test_mint_rejects_zero_weight.1.json  test_mint_success.1.json  test_mint_to_transfer_lifecycle.1.json  test_mint_token_id_format.1.json  test_mint_total_weight_calculated_correctly.1.json  test_query_balance_empty_wallet.1.json  test_query_balance_excludes_other_wallets.1.json  test_query_balance_returns_owned_tokens.1.json  test_query_token_not_found.1.json  (+14 more)
contracts/sesame-receipt/: Cargo.toml
contracts/sesame-receipt/src/: lib.rs
scripts/: deploy-maize-testnet.sh  deploy-sesame-testnet.sh  fund-dev-account.sh
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  index.ts  types.ts
sdk/src/maize/: init.ts
sdk/tests/: certificate.test.ts  client.test.ts  maize.init.test.ts
(+29 files in other folders)
