[workspace]
resolver = "2"
members = [
    "contracts/maize-receipt",
    "contracts/sesame-receipt",
]

[workspace.dependencies]
soroban-sdk = { version = "21.0.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
